<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GrammarTest" >

    <EditText
        android:id="@+id/phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ask_phrase" 
        android:paddingLeft="20dip">

        <requestFocus />
    </EditText>

        <RadioGroup
	    android:id="@+id/grammar_radioGroup"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="20dip" >

	    <RadioButton
	        android:id="@+id/handCrafted_radio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/radiobutton_handcrafted"
	        android:checked="true" />
	
	    <RadioButton
	        android:id="@+id/statistical_radio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/radiobutton_statistical" />
	</RadioGroup>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="50dp"
        android:paddingLeft="20dip"
        android:layout_gravity="center">

        <Button
            android:id="@+id/txtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn" />

        <Button
            android:id="@+id/asrButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asr_btn_default" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtViewResult"
        android:paddingLeft="20dip"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.86"
        android:text="@string/result_none"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>